fix: get work experiences of specified users
